--- a/frontend/index.html
+++ b/frontend/index.html
@@ -133,6 +133,10 @@
                             </div>
                         </div>
                         <div class="share-section">
+                            <button class="share-button" id="play-again-button">
+                                <i class="bi bi-arrow-repeat"></i>
+                                Play again
+                            </button>
                             <button class="share-button" id="share-button">
                                 <i class="bi bi-share"></i>
                                 Share your result
