--- a/frontend/index.html
+++ b/frontend/index.html
@@ -209,7 +209,7 @@
                 How to play
             </button>
             <div class="footer-text">
-                <p>A musical deduction game • Inspired by <a href="https://1jour1film.com" target="_blank">1jour1film</a></p>
+                <p>A musical deduction game • Inspired by <a href="https://1jour1film.fr" target="_blank">1jour1film</a></p>
             </div>
         </footer>
     </div>
