--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
 </head>
 <body>
+    <a href="#main-content" class="skip-link">Skip to content</a>
     <div class="container">
         <header class="header">
             <div class="logo">
@@ -19,6 +20,20 @@
                 <p>Find the mystery album using the revealed clues</p>
                 <div class="date" id="game-date"></div>
             </div>
+            <nav class="site-nav" aria-label="Primary">
+                <button class="nav-toggle" aria-expanded="false" aria-controls="primary-nav">
+                    <i class="bi bi-list" aria-hidden="true"></i>
+                    <span class="visually-hidden">Menu</span>
+                </button>
+                <ul id="primary-nav" class="nav-list">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html" aria-current="page">
+                            <i class="bi bi-controller" aria-hidden="true"></i>
+                            <span>The Game</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
             <div class="auth-controls">
                 <button class="footer-button" id="btn-login">
                     <i class="bi bi-box-arrow-in-right"></i>
@@ -35,7 +50,7 @@
             </div>
         </header>
 
-        <main class="game-container">
+        <main id="main-content" class="game-container">
             <div class="content-grid">
                 <div class="main-column">
                     <!-- Game Status -->
@@ -329,6 +344,7 @@
     <script src="https://cdn.jsdelivr.net/npm/algoliasearch@4.14.3/dist/algoliasearch.umd.js"></script>
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.1/auth0-spa-js.production.js"></script>
     <script src="config.js"></script>
+    <script src="nav.js"></script>
     <script src="game.js"></script>
 </body>
 </html>
