--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,6 +32,12 @@
                             <span>The Game</span>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="statistics.html">
+                            <i class="bi bi-bar-chart-line" aria-hidden="true"></i>
+                            <span>Statistics</span>
+                        </a>
+                    </li>
                 </ul>
             </nav>
             <div class="auth-controls">
@@ -107,18 +113,7 @@
                     </div>
                 </div>
 
-                <!-- Right Sidebar: User Found Albums History -->
-                <aside class="sidebar-panel" id="user-history-panel">
-                    <div class="user-history">
-                        <div class="user-history-header">
-                            <h3><i class="bi bi-person-lines-fill"></i> Your found albums</h3>
-                            <div class="user-history-subtitle" id="user-history-subtitle">Log in to save and see your history</div>
-                        </div>
-                        <div class="user-history-list" id="user-history-list">
-                            <!-- Saved wins will render here -->
-                        </div>
-                    </div>
-                </aside>
+                
             </div>
 
             <!-- Victory Modal -->
