--- a/frontend/statistics.html
+++ b/frontend/statistics.html
@@ -56,13 +56,21 @@
         </header>
 
         <main id="main-content" class="game-container">
-            <div class="content-grid" style="grid-template-columns: 1fr;">
+            <div class="stats-grid">
                 <section class="user-history" aria-labelledby="stats-title">
                     <div class="user-history-header">
                         <h3 id="stats-title"><i class="bi bi-person-lines-fill"></i> Your found albums</h3>
                         <div class="user-history-subtitle" id="user-history-subtitle">Log in to save and see your history</div>
                     </div>
                     <div class="user-history-list" id="user-history-list"></div>
+                </section>
+
+                <section class="user-history" aria-labelledby="user-stats-title">
+                    <div class="user-history-header">
+                        <h3 id="user-stats-title"><i class="bi bi-bar-chart-fill"></i> Your statistics</h3>
+                        <div class="user-history-subtitle" id="user-stats-subtitle">Log in to see your stats</div>
+                    </div>
+                    <div class="stats-cards" id="stats-cards"></div>
                 </section>
             </div>
 
