--- a/frontend/statistics.html
+++ b/frontend/statistics.html
@@ -37,6 +37,12 @@
                             <span>Statistics</span>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="album-of-the-day.html">
+                            <i class="bi bi-calendar-event" aria-hidden="true"></i>
+                            <span>Album of the Day</span>
+                        </a>
+                    </li>
                 </ul>
             </nav>
             <div class="auth-controls">
