--- a/frontend/album-of-the-day.html
+++ b/frontend/album-of-the-day.html
@@ -12,10 +12,7 @@
     <a href="#main-content" class="skip-link">Skip to content</a>
     <div class="container">
         <div id="site-header"></div>
-        <div class="subtitle">
-            <p>Guess the album of the day</p>
-            <div class="date" id="game-date"></div>
-        </div>
+        
 
         <main id="main-content" class="game-container">
             <div class="content-grid">
@@ -26,9 +23,8 @@
                             <i class="bi bi-music-note-beamed"></i>
                             <span id="guess-count">0</span> guesses
                         </div>
-                        <div class="mystery-indicator">
-                            <i class="bi bi-question-circle"></i>
-                            <span>Album of the day</span>
+                        <div class="status-subtitle">
+                            <div class="date" id="game-date"></div>
                         </div>
                     </div>
 
