--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div id="site-header"></div>
         <div class="subtitle">
-            <p>Find the mystery album using the revealed clues</p>
+            <p>Find the mystery album using the revealed clues.</p>
             <div class="date" id="game-date"></div>
         </div>
 
