load each mystery for its own page

--- a/frontend/game.html
+++ b/frontend/game.html
@@ -295,5 +295,11 @@
     <script src="includes.js"></script>
     <script src="nav.js"></script>
     <script src="game.js"></script>
+    <script>
+        // Initialize random album game
+        document.addEventListener('DOMContentLoaded', () => {
+            new AlbumGuessrGame();
+        });
+    </script>
 </body>
 </html>
