--- a/frontend/index.html
+++ b/frontend/index.html
@@ -82,7 +82,9 @@
                     </div>
                     <div class="modal-body">
                         <div class="victory-message">
-                            <p>You found the album of the day!</p>
+                            <p>You found the album of the day!
+                                Come back tomorrow for a new mystery album!
+                            </p>
                         </div>
                         <div class="mystery-album" id="mystery-album-display">
                             <!-- Mystery album info will be displayed here -->
