add ranking page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -260,6 +260,9 @@
         <div id="site-footer"></div>
     </div>
 
+    <!-- Toast Notification Container -->
+    <div id="toast-container" class="toast-container"></div>
+
     <!-- Loading Spinner -->
     <div class="loading" id="loading">
         <div class="spinner"></div>
