add show rankings to victory modal

--- a/frontend/game.html
+++ b/frontend/game.html
@@ -109,6 +109,10 @@
                                 <i class="bi bi-arrow-repeat"></i>
                                 Play again
                             </button>
+                            <button class="share-button" id="show-rankings-button">
+                                <i class="bi bi-trophy-fill"></i>
+                                Show Rankings
+                            </button>
                             <button class="share-button" id="share-button">
                                 <i class="bi bi-share"></i>
                                 Share your result
@@ -280,6 +284,9 @@
         <br>
         <div id="site-footer"></div>
     </div>
+
+    <!-- Toast Notification Container -->
+    <div id="toast-container" class="toast-container"></div>
 
     <!-- Loading Spinner -->
     <div class="loading" id="loading">
