--- a/frontend/index.html
+++ b/frontend/index.html
@@ -104,6 +104,10 @@
                             </div>
                         </div>
                         <div class="share-section">
+                            <button class="share-button" id="show-rankings-button">
+                                <i class="bi bi-trophy-fill"></i>
+                                Show Rankings
+                            </button>
                             <button class="share-button" id="share-button">
                                 <i class="bi bi-share"></i>
                                 Share your result
