--- a/frontend/game.html
+++ b/frontend/game.html
@@ -299,12 +299,6 @@
     <script src="config.js"></script>
     <script src="includes.js"></script>
     <script src="nav.js"></script>
-    <script src="game.js"></script>
-    <script>
-        // Initialize random album game
-        document.addEventListener('DOMContentLoaded', () => {
-            new AlbumGuessrGame();
-        });
-    </script>
+    <script type="module" src="game.js"></script>
 </body>
 </html>
