--- a/frontend/index.html
+++ b/frontend/index.html
@@ -278,8 +278,7 @@
     <script src="config.js"></script>
     <script src="includes.js"></script>
     <script src="nav.js"></script>
-    <script src="game.js"></script>
-    <script src="daily.js"></script>
+    <script type="module" src="daily.js"></script>
 </body>
 </html>
 
