--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -110,7 +110,7 @@
     <script src="config.js"></script>
     <script src="includes.js"></script>
     <script src="nav.js"></script>
-    <script src="profile.js"></script>
+    <script type="module" src="profile.js"></script>
 </body>
 </html>
 
