--- a/frontend/ranking.html
+++ b/frontend/ranking.html
@@ -54,8 +54,9 @@
     <script src="config.js"></script>
     <script src="includes.js"></script>
     <script src="nav.js"></script>
-    <script src="ranking.js"></script>
+    <script type="module" src="ranking.js"></script>
 </body>
 </html>
+
 
 
