--- a/frontend/statistics.html
+++ b/frontend/statistics.html
@@ -69,7 +69,7 @@
     <script src="config.js"></script>
     <script src="includes.js"></script>
     <script src="nav.js"></script>
-    <script src="stats.js"></script>
+    <script type="module" src="stats.js"></script>
 </body>
 </html>
 
