fix avatar display

--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -27,7 +27,7 @@
                         <div class="profile-section">
                             <div class="profile-info" id="profile-info">
                                 <div class="profile-avatar-container">
-                                    <img id="profile-avatar" class="profile-avatar-large" alt="Profile picture">
+                                    <img id="profile-avatar" class="profile-avatar-large" alt="Profile picture" crossorigin="anonymous">
                                 </div>
                                 <div class="profile-details">
                                     <div class="profile-email" id="profile-email"></div>
