--- a/frontend/game.html
+++ b/frontend/game.html
@@ -299,6 +299,11 @@
     <script src="config.js"></script>
     <script src="includes.js"></script>
     <script src="nav.js"></script>
-    <script type="module" src="game.js"></script>
+    <script type="module">
+        import { AlbumGuessrGame } from './game.js';
+        document.addEventListener('DOMContentLoaded', () => {
+            new AlbumGuessrGame();
+        });
+    </script>
 </body>
 </html>
