fix ranking page to match only game_mode=daily

--- a/frontend/ranking.html
+++ b/frontend/ranking.html
@@ -13,7 +13,7 @@
         <div id="site-header"></div>
         <div class="subtitle">
             <h1 style="color: white; font-size: 2.5rem; margin-bottom: 0.5rem;">Daily Ranking</h1>
-            <p id="ranking-subtitle">Here are the players who found the album the fastest.</p>
+            <p id="ranking-subtitle">Here are the players who found the daily album the fastest.</p>
         </div>
 
         <main id="main-content" class="game-container">
