--- a/frontend/index.html
+++ b/frontend/index.html
@@ -259,6 +259,7 @@
 
     <!-- Loading Spinner -->
     <div class="loading" id="loading">
+        <img src="img/logo.png" alt="AlbumGuessr" style="width: 300px; margin-bottom: 2rem;">
         <div class="spinner"></div>
         <p>Loading the album of the day...</p>
     </div>
