formulaire change username

--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -36,14 +36,14 @@
                         </div>
                         
                         <div class="profile-section">
-                            <h4 class="profile-section-title">Change Username</h4>
                             <form id="username-form" class="username-form">
                                 <div class="form-group">
-                                    <label for="current-username">Current username</label>
-                                    <input type="text" id="current-username" class="form-input" readonly>
+                                    <p style="color: white; font-size: 0.95rem; margin-bottom: 1rem;">
+                                        Current username: <span id="current-username" style="font-weight: 600;"></span>
+                                    </p>
                                 </div>
                                 <div class="form-group">
-                                    <label for="new-username">New username</label>
+                                    <label for="new-username">Change username</label>
                                     <input type="text" id="new-username" class="form-input" placeholder="Enter new username" required minlength="3" maxlength="30">
                                 </div>
                                 <div class="form-message" id="username-message"></div>
