--- a/frontend/report-bug.html
+++ b/frontend/report-bug.html
@@ -62,6 +62,7 @@
     </div>
 
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.1/auth0-spa-js.production.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script src="config.js"></script>
     <script src="includes.js"></script>
     <script src="nav.js"></script>
